# dep_parser

./: BUILD  README.md  WORKSPACE
init/: BUILD.bazel  main.go  read_json.go
