load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "read_json.go",
    ],
    importpath = "dep_parser/init",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "init",
    data = glob(["resources/**"]),
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
